--- a/Web/css/style.css
+++ b/Web/css/style.css
@@ -1,192 +1,88 @@
-@charset "utf-8";
-body{
+body {
     margin: 0;
-    padding: 0;
-    background: rgb(255, 255, 255);
-    font-family: "Noto Sans KR";
-}
+    font-family: Arial, Helvetica, sans-serif;
+    /* Modal PopUp */ 
+    /*
+    font-size: 1.5em;
+    justify-content: center;
+    line-height: 1.5;
+    margin: 0;
+    padding: 1em 3em;
+    */
+  }
+  
+  .topnav {
+    overflow: hidden;
+    background-color: rgb(0, 0, 0);
+  }
+  
+  .topnav a {
+    float: right;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  .topnav a.active {
+    background-color: #5c5c5c;
+    color: white;
+  }
 
-/* HOME------------------------------------------------------------------------------------------ */
+  .image{
+    width: 100%;
+    height: 100%;
+ }​
 
-/* SIGN UP ------------------------------------------------------------------------------*/
+ .content{
+    text-align: center;
+    float: right;
+ }
 
-.banner{
-	position: relative;
-	width: 100%;
-	height: calc(100vh - 50px);
-	background-color: #F5F5F5;
-	background-size: cover;
-	background-position: center;
-	transition: all .1s ease-out;
-	background-image: url('../assets/img/banner-1.jpg');
-	animation: banner 28s infinite linear;
+/* Modal PopUp */
+#show {
+  position: fixed;
+  top: 30px;
+  left: 10px;
 }
-.banner-content{
-	margin: 0;
-	padding: 0;
-	width: 100%;
-	height: 100%;
-	color: #FFF;
-	background-color: rgba(0, 22, 40, .6);
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
+#show,
+#close {
+  background: #000000;
+  border: none;
+  color: #fff;
+  display: block;
+  font-size: 1em;
+  padding: 1em;
+  width: 200px;
 }
-.banner-content h1{
-	margin: 0;
-	padding: 0;
-	padding-bottom: 30px;
-	font-size: 40px;
-	text-align: center;
+#show:hover,
+#close:hover {
+  background: #888888;
+  cursor: pointer;
 }
-.banner-content a{
-	text-decoration: none;
-	color: #FFF;
-	padding: 9px 20px;
-	border: 1px solid #FFF;
-	text-transform: uppercase;
-	transition: all .3s ease-in-out;
+#dialog {
+  display: none;
+  position: fixed;
+  top: 10vh;
+  left: 10vw;
+  width: 80vw;
+  height: 80vh;
+  border: 1px solid rgb(0, 0, 0);
+  border-radius: 4px;
+  padding: 10px;
+  text-align: center;
+  z-index: 1;
+  background-color: rgb(255, 255, 255);
+  color: #fff;
 }
-.banner-content a:hover{
-	background-color: #fff;
-	color: #333;
-}
-@keyframes banner{
-	0%{
-		background-image: url('../img/banner-1.jpg');
-	}
-	25%{
-		background-image: url('../img/banner-1.jpg');
-	}
-
-
-	26%{
-		background-image: url('../img/banner-2.jpg');
-	}
-	50%{
-		background-image: url('../img/banner-2.jpg');
-	}
-
-
-	51%{
-		background-image: url('../img/banner-3.jpg');
-	}
-	75%{
-		background-image: url('../img/banner-3.jpg');
-	}
-	
-
-	76%{
-		background-image: url('../img/banner-4.jpg');
-	}
-	100%{
-		background-image: url('../img/banner-4.jpg');
-	}
-
-}
-
-
-
-
-
-/* CSS Document */
-
-a{
-	text-decoration:none;
-}
-.container{
-	width:72%;
-	height:70%;
-	background-color:#FFFFFF;
-	position: absolute;
-	left:50%;
-	top:50%;
-	transform:translate(-50%,-50%);
-	box-shadow:2px 2px 30px rgba(66,57,238,0.2);
-	border-radius:20px;
-	display:flex;
-	justify-content: center;
-	align-items:center;
-	background-image: url("../img/bg.gif");
-	background-repeat:no-repeat;
-	background-size:cover;
-}
-.sign-up{
-	width:50%;
-	display:flex;
-	flex-direction:column;
-	align-items: center;
-	
-}
-.text-container{
-	width:50%;
-	height:100%;
-	display:flex;
-	flex-direction:column;
-	justify-content: center;
-	align-items: center;
-	margin-left:-40px;
-	
-}
-.heading{
-	font-family:calibri;
-	color:rgba(30,30,30,1);
-}
-.text{
-	width:350px;
-	height:50px;
-	box-shadow:2px 6px 18px rgba(66,57,238,0.3);
-	border-radius: 30px;
-	display:flex;
-	align-items:center;
-	margin:10px;
-}
-.text input{
-	height:40px;
-	width:80%;
-	outline:none;
-	border:none;
-	font-size:14px;
-	margin:5px;
-}
-.text img{
-	margin-left:20px; 
-}
-.conditions{
-	font-family:myriad pro;
-	color:#bbc1cb;
-	font-size:14px;
-}
-.trems{
-	display: flex;
-	align-items:center; 
-}
-.conditions a{
-	color:#7d22e3;
-	font-weight:500;
-}
-button{
-	width:200px;
-	height:40px;
-	outline:none;
-	border:none;
-	border-radius:20px;
-	background:linear-gradient(-30deg,#3b02ed,#8e2ae0 55%);
-	box-shadow:2px 6px 16px rgba(66,57,238,0.3);
-	color:#FFFFFF;
-	font-weight:600;
-	letter-spacing:1px;
-	font-weight: 13px;
-}
-button:active{
-	transform:scale(1.1);
-}
-.text-container p{
-	width:70%;
-	text-align: center;
-	font-family:arial;
-	font-size: 15px;
-	font-weight: 400;
-	line-height:0px;
+#dialog.show {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
 }
