--- a/Web/css/style.css
+++ b/Web/css/style.css
@@ -39,53 +39,49 @@ body {
 
 /* Modal PopUp */
 #dialog {
-  display: none;
-  position: fixed;
-  top: 10vh;
-  left: 10vw;
-  width: 80%;
-  height: 80%;
-  border: 1px solid rgb(0, 0, 0);
-  border-radius: 4px;
-  padding: 10px;
-  text-align: center;
-  z-index: 1;
-  background-color: rgb(255, 255, 255);
-  color: rgb(0, 0, 0);
-  font-family: Arial, Helvetica, sans-serif;
-}
-#dialog.show {
-  display: flex;
-  flex-direction: column;
-}
+    display: none;
+    position: absolute;
+    top: 10vh;
+    left: 10vw;
+    width: 80%;
+    height: 80%;
+    border: 1px solid rgb(0, 0, 0);
+    border-radius: 4px;
+    padding: 0px;
+    z-index: 1;
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
+    font-family: Arial, Helvetica, sans-serif;
+  }
+  #dialog.show {
+    display: flex;
+    flex-direction: column;
+  }
+  
+  #show:hover,
+  #close:hover {
+    background: #ff8a00;
+    cursor: pointer;
+  }
+  
+  /* The Close Button */
+  .close {
+    color: #aaaaaa;
+    font-size: 50px;
+    font-weight: bold;
 
-#show:hover,
-#close:hover {
-  background: #ff8a00;
-  cursor: pointer;
-}
-#show {
-  position: absolute;
-  top: 30px;
-  left: 10px;
-}
-#close {
-  position: relative;
-}
-
-/* The Close Button */
-.close {
-  align-items: flex-end;
-  display: flex;
-  flex-direction:column;
-  color: #aaaaaa;
-  font-size: 60px;
-  font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-  color: rgb(0, 0, 0);
-  text-decoration: none;
-  cursor: pointer;
-}
+    display: inline-block;
+    padding: 5px;
+    cursor: pointer;
+    position: absolute;
+    top: 0%;
+    right: 0%;
+    transform: translate(0%, -27%);
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: rgb(0, 0, 0);
+    text-decoration: none;
+    cursor: pointer;
+  }
