--- a/Web/css/style.css
+++ b/Web/css/style.css
@@ -39,49 +39,223 @@ body {
 
 /* Modal PopUp */
 #dialog {
-    display: none;
-    position: absolute;
-    top: 10vh;
-    left: 10vw;
-    width: 80%;
-    height: 80%;
-    border: 1px solid rgb(0, 0, 0);
-    border-radius: 4px;
-    padding: 0px;
-    z-index: 1;
-    background-color: rgb(255, 255, 255);
-    color: rgb(0, 0, 0);
-    font-family: Arial, Helvetica, sans-serif;
-  }
-  #dialog.show {
-    display: flex;
-    flex-direction: column;
-  }
-  
-  #show:hover,
-  #close:hover {
-    background: #ff8a00;
-    cursor: pointer;
-  }
-  
-  /* The Close Button */
-  .close {
-    color: #aaaaaa;
-    font-size: 50px;
-    font-weight: bold;
+  display: none;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 400px;
+  border: 1px solid rgb(0, 0, 0);
+  border-radius: 10px;
+  padding: 0px;
+  z-index: 1;
+  background-color: rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
+  font-family: Arial, Helvetica, sans-serif;
 
-    display: inline-block;
-    padding: 5px;
-    cursor: pointer;
-    position: absolute;
-    top: 0%;
-    right: 0%;
-    transform: translate(0%, -27%);
-  }
-  
-  .close:hover,
-  .close:focus {
-    color: rgb(0, 0, 0);
-    text-decoration: none;
-    cursor: pointer;
-  }
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 400px;
+  padding: 40px;
+  transform: translate(-50%, -50%);
+  box-sizing: border-box;
+  box-shadow: 0 15px 25px rgba(0,0,0,.6);
+}
+#dialog.show {
+  display: flex;
+  flex-direction: column;
+}
+
+/* The Close Button */
+.close {
+  color: #000000;
+  font-size: 50px;
+  font-weight: bold;
+  display: inline-block;
+  padding: 5px;
+  cursor: pointer;
+  position: absolute;
+  top: 0%;
+  right: 0%;
+  transform: translate(0%, -27%);
+}
+
+.close:hover,
+.close:focus {
+  color: #aaaaaa;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.dialog-content {
+  text-align: center;
+}
+
+.closing {
+  color: #aaaaaa;
+  font-size: 40px;
+  display: inline-block;
+  padding: 5px;
+  cursor: pointer;
+  position: absolute;
+  top: 0%;
+  right: 0%;
+  transform: translate(0%, -80%);
+  display: none;
+}
+
+.closing:hover {
+  color: rgb(0, 0, 0);
+  cursor: pointer;
+}
+
+/* Login Box */
+.login-box {
+
+}
+
+.login-box h2 {
+  margin: 0 0 30px;
+  padding: 0;
+  color: rgb(0, 0, 0);
+  text-align: center;
+}
+
+.login-box .user-box {
+position: relative;
+}
+
+.login-box .user-box input {
+  width: 100%;
+  padding: 10px 0;
+  font-size: 16px;
+  color: rgb(0, 0, 0);
+  margin-bottom: 30px;
+  border: none;
+  border-bottom: 1px solid #000000;
+  outline: none;
+  background: transparent;
+}
+.login-box .user-box label {
+  position: absolute;
+  top:0;
+  left: 0;
+  padding: 10px 0;
+  font-size: 16px;
+  color: rgb(0, 0, 0)0, 0, 0);
+  pointer-events: none;
+  transition: .5s;
+}
+
+.login-box .user-box input:focus ~ label,
+.login-box .user-box input:valid ~ label {
+  top: -20px;
+  left: 0;
+  color: #777777;
+  font-size: 12px;
+}
+
+.login-box form a {
+  position: relative;
+  display: inline-block;
+  padding: 10px 20px;
+  color: #000000;
+  font-size: 16px;
+  text-decoration: none;
+  text-transform: uppercase;
+  overflow: hidden;
+  transition: .5s;
+  margin-top: 40px;
+  letter-spacing: 4px
+}
+
+.login-box a:hover {
+  background: #aaaaaa;
+  color: rgb(0, 0, 0);
+  border-radius: 5px;
+  box-shadow: 0 0 5px #aaaaaa,
+      0 0 25px #aaaaaa,
+      0 0 50px #aaaaaa,
+      0 0 100px #aaaaaa;
+}
+
+.login-box a span {
+  position: absolute;
+  display: block;
+}
+
+.login-box a span:nth-child(1) {
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(90deg, transparent, #000000);
+  animation: btn-anim1 1s linear infinite;
+}
+
+@keyframes btn-anim1 {
+0% {
+  left: -100%;
+}
+50%,100% {
+  left: 100%;
+}
+}
+
+.login-box a span:nth-child(2) {
+  top: -100%;
+  right: 0;
+  width: 2px;
+  height: 100%;
+  background: linear-gradient(180deg, transparent, #000000);
+  animation: btn-anim2 1s linear infinite;
+  animation-delay: .25s
+}
+
+@keyframes btn-anim2 {
+0% {
+  top: -100%;
+}
+50%,100% {
+  top: 100%;
+}
+}
+
+.login-box a span:nth-child(3) {
+  bottom: 0;
+  right: -100%;
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(270deg, transparent, #000000);
+  animation: btn-anim3 1s linear infinite;
+  animation-delay: .5s
+}
+
+@keyframes btn-anim3 {
+0% {
+  right: -100%;
+}
+50%,100% {
+  right: 100%;
+}
+}
+
+.login-box a span:nth-child(4) {
+  bottom: -100%;
+  left: 0;
+  width: 2px;
+  height: 100%;
+  background: linear-gradient(360deg, transparent, #000000);
+  animation: btn-anim4 1s linear infinite;
+  animation-delay: .75s
+}
+
+@keyframes btn-anim4 {
+0% {
+  bottom: -100%;
+}
+50%,100% {
+  bottom: 100%;
+}
+}
