--- a/Web/css/style.css
+++ b/Web/css/style.css
@@ -37,52 +37,39 @@ body {
     float: right;
  }
 
-/* Modal PopUp */
-#dialog {
-  display: none;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 250px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 0px;
+  border: 1px solid #888;
   width: 400px;
   border: 1px solid rgb(0, 0, 0);
   border-radius: 10px;
-  padding: 0px;
-  z-index: 1;
-  background-color: rgb(255, 255, 255);
-  color: rgb(0, 0, 0);
-  font-family: Arial, Helvetica, sans-serif;
-
-  padding: 40px;
-  box-sizing: border-box;
-  box-shadow: 0 15px 25px rgba(0,0,0,.6);
-}
-#dialog.show {
-  display: flex;
-  flex-direction: column;
-}
-
-.dialog-submit {
-	background: none;
-	color: inherit;
-	border: none;
-	padding: 0;
-	font: inherit;
-	cursor: pointer;
-	outline: inherit;
+  text-align: center;
 }
 
 /* The Close Button */
 .close {
   color: #000000;
-  font-size: 50px;
-  display: inline-block;
-  padding: 5px;
-  cursor: pointer;
-  position: absolute;
-  top: 0%;
-  right: 0%;
-  transform: translate(0%, -27%);
+  float: right;
+  transform: translate(0%, -40%);
+  font-size: 60px;
 }
 
 .close:hover,
@@ -92,154 +79,167 @@ body {
   cursor: pointer;
 }
 
-.dialog-content {
-  text-align: center;
+.modal-submit {
+	background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
 }
 
 /* Login Box */
+.login-box {
+	text-align: center;
+	padding: 20px;
+}
+
 .login-box h2 {
-  margin: 0 0 30px;
-  padding: 0;
-  color: rgb(0, 0, 0);
-  text-align: center;
-}
-
-.login-box .user-box {
-position: relative;
-}
-
-/* Line under labels*/
-.login-box .user-box input {
-  width: 100%;
-  padding: 3px 0;
-  font-size: 16px;
-  color: rgb(0, 0, 0);
-  margin-bottom: 30px;
-  border: none;
-  border-bottom: 1px solid #000000;
-  outline: none;
-  background: transparent;
-}
-.login-box .user-box label {
-  position: absolute;
-  top:0;
-  left: 0;
-  padding: 10px 0;
-  font-size: 16px;
-  color: rgb(0, 0, 0);
-  pointer-events: none;
-  transition: .5s;
-}
-
-/* Cool Button */
-.login-box .user-box input:focus ~ label,
-.login-box .user-box input:valid ~ label {
-  top: -20px;
-  left: 0;
-  color: #777777;
-  font-size: 12px;
-}
-
-.login-box form a {
+	margin: 0 0 30px;
+	padding: 0;
+	color: rgb(0, 0, 0);
+	text-align: center;
+  }
+  
+  .login-box .user-box {
   position: relative;
-  display: inline-block;
-  padding: 10px 20px;
-  color: #000000;
-  font-size: 16px;
-  text-decoration: none;
-  text-transform: uppercase;
-  overflow: hidden;
-  transition: .5s;
-  margin-top: 40px;
-  letter-spacing: 4px
-}
-
-.login-box a:hover {
-  background: #c9c9c9;
-  color: rgb(0, 0, 0);
-  border-radius: 5px;
-  box-shadow: 0 0 5px #c9c9c9,
-      0 0 25px #c9c9c9,
-      0 0 50px #c9c9c9,
-      0 0 100px #c9c9c9;
-}
-
-.login-box a span {
-  position: absolute;
-  display: block;
-}
-
-.login-box a span:nth-child(1) {
-  top: 0;
-  left: -100%;
-  width: 100%;
-  height: 2px;
-  background: linear-gradient(90deg, transparent, #000000);
-  animation: btn-anim1 1s linear infinite;
-}
-
-@keyframes btn-anim1 {
-0% {
-  left: -100%;
-}
-50%,100% {
-  left: 100%;
-}
-}
-
-.login-box a span:nth-child(2) {
-  top: -100%;
-  right: 0;
-  width: 2px;
-  height: 100%;
-  background: linear-gradient(180deg, transparent, #000000);
-  animation: btn-anim2 1s linear infinite;
-  animation-delay: .25s
-}
-
-@keyframes btn-anim2 {
-0% {
-  top: -100%;
-}
-50%,100% {
-  top: 100%;
-}
-}
-
-.login-box a span:nth-child(3) {
-  bottom: 0;
-  right: -100%;
-  width: 100%;
-  height: 2px;
-  background: linear-gradient(270deg, transparent, #000000);
-  animation: btn-anim3 1s linear infinite;
-  animation-delay: .5s
-}
-
-@keyframes btn-anim3 {
-0% {
-  right: -100%;
-}
-50%,100% {
-  right: 100%;
-}
-}
-
-.login-box a span:nth-child(4) {
-  bottom: -100%;
-  left: 0;
-  width: 2px;
-  height: 100%;
-  background: linear-gradient(360deg, transparent, #000000);
-  animation: btn-anim4 1s linear infinite;
-  animation-delay: .75s
-}
-
-@keyframes btn-anim4 {
-0% {
-  bottom: -100%;
-}
-50%,100% {
-  bottom: 100%;
-}
-}
+  }
+  
+  /* Line under labels*/
+  .login-box .user-box input {
+	width: 100%;
+	padding: 5px 0;
+	font-size: 16px;
+	color: rgb(0, 0, 0);
+	margin-bottom: 30px;
+	border: none;
+	border-bottom: 1px solid #000000;
+	outline: none;
+	background: transparent;
+  }
+  .login-box .user-box label {
+	position: absolute;
+	top:0;
+	left: 0;
+	padding: 10px 0;
+	font-size: 16px;
+	color: rgb(0, 0, 0);
+	pointer-events: none;
+	transition: .5s;
+  }
+  
+  /* Cool Button */
+  .login-box .user-box input:focus ~ label,
+  .login-box .user-box input:valid ~ label {
+	top: -20px;
+	left: 0;
+	color: #777777;
+	font-size: 12px;
+  }
+  
+  
+  .login-box form a {
+	position: relative;
+	display: inline-block;
+	padding: 10px 20px;
+	color: #000000;
+	font-size: 16px;
+	text-decoration: none;
+	text-transform: uppercase;
+	overflow: hidden;
+	transition: .5s;
+	margin-top: 40px;
+	letter-spacing: 4px
+  }
+  
+  .login-box a:hover {
+	background: #c9c9c9;
+	color: rgb(0, 0, 0);
+	border-radius: 5px;
+	box-shadow: 0 0 5px #c9c9c9,
+		0 0 25px #c9c9c9,
+		0 0 50px #c9c9c9,
+		0 0 100px #c9c9c9;
+  }
+  
+  .login-box a span {
+	position: absolute;
+	display: block;
+  }
+  
+  .login-box a span:nth-child(1) {
+	top: 0;
+	left: -100%;
+	width: 100%;
+	height: 2px;
+	background: linear-gradient(90deg, transparent, #000000);
+	animation: btn-anim1 1s linear infinite;
+  }
+  
+  @keyframes btn-anim1 {
+  0% {
+	left: -100%;
+  }
+  50%,100% {
+	left: 100%;
+  }
+  }
+  
+  .login-box a span:nth-child(2) {
+	top: -100%;
+	right: 0;
+	width: 2px;
+	height: 100%;
+	background: linear-gradient(180deg, transparent, #000000);
+	animation: btn-anim2 1s linear infinite;
+	animation-delay: .25s
+  }
+  
+  @keyframes btn-anim2 {
+  0% {
+	top: -100%;
+  }
+  50%,100% {
+	top: 100%;
+  }
+  }
+  
+  .login-box a span:nth-child(3) {
+	bottom: 0;
+	right: -100%;
+	width: 100%;
+	height: 2px;
+	background: linear-gradient(270deg, transparent, #000000);
+	animation: btn-anim3 1s linear infinite;
+	animation-delay: .5s
+  }
+  
+  @keyframes btn-anim3 {
+  0% {
+	right: -100%;
+  }
+  50%,100% {
+	right: 100%;
+  }
+  }
+  
+  .login-box a span:nth-child(4) {
+	bottom: -100%;
+	left: 0;
+	width: 2px;
+	height: 100%;
+	background: linear-gradient(360deg, transparent, #000000);
+	animation: btn-anim4 1s linear infinite;
+	animation-delay: .75s
+  }
+  
+  @keyframes btn-anim4 {
+  0% {
+	bottom: -100%;
+  }
+  50%,100% {
+	bottom: 100%;
+  }
+  }
+  
