--- a/Web - Copy/css/style-2.css
+++ b/Web - Copy/css/style-2.css
@@ -17,22 +17,26 @@ body {font-family: Arial, Helvetica, sans-serif;}
 
 /* Modal Content */
 .modal-content {
+	text-align: center;
   background-color: #fefefe;
   margin: auto;
-  padding: 0px;
+  padding: 20px;
   border: 1px solid #888;
   width: 400px;
-  border: 1px solid rgb(0, 0, 0);
-  border-radius: 10px;
-  text-align: center;
 }
 
 /* The Close Button */
 .close {
+	
+
+
+
+
+
   color: #000000;
   float: right;
-
-  font-size: 50px;
+  font-size: 28px;
+  font-weight: bold;
 }
 
 .close:hover,
@@ -42,7 +46,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
   cursor: pointer;
 }
 
-.modal-submit {
+.dialog-submit {
 	background: none;
 	color: inherit;
 	border: none;
@@ -53,11 +57,6 @@ body {font-family: Arial, Helvetica, sans-serif;}
 }
 
 /* Login Box */
-.login-box {
-	text-align: center;
-	padding: 20px;
-}
-
 .login-box h2 {
 	margin: 0 0 30px;
 	padding: 0;
