--- a/Web/css/style-2.css
+++ b/Web/css/style-2.css
@@ -29,10 +29,10 @@ body {font-family: Arial, Helvetica, sans-serif;}
 
 /* The Close Button */
 .close {
-  color: #000000;
-  float: right;
-
-  font-size: 50px;
+	color: #000000;
+	float: right;
+	letter-spacing:7px;
+	font-size: 50px;
 }
 
 .close:hover,
