--- a/Web/css/style.css
+++ b/Web/css/style.css
@@ -66,15 +66,15 @@ body {
 
 /* The Close Button */
 .close {
-  color: #000000;
-  float: right;
-  transform: translate(0%, -40%);
-  font-size: 60px;
+	color: #000000;
+	float: right;
+	font-size: 60px;
+  transform: translate(-20%, -25%);
 }
 
 .close:hover,
 .close:focus {
-  color: #c9c9c9;
+  color: rgb(107, 107, 107);
   text-decoration: none;
   cursor: pointer;
 }
@@ -122,7 +122,7 @@ body {
 	position: absolute;
 	top:0;
 	left: 0;
-	padding: 10px 0;
+	padding: 0px 0;
 	font-size: 16px;
 	color: rgb(0, 0, 0);
 	pointer-events: none;
