--- a/Web/css/style-2.css
+++ b/Web/css/style-2.css
@@ -1,83 +1,45 @@
-body {font-family: Arial, Helvetica, sans-serif;}
-
-/* The Modal (background) */
-.modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  padding-top: 250px; /* Location of the box */
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-}
-
-/* Modal Content */
-.modal-content {
-  background-color: #fefefe;
-  margin: auto;
-  padding: 0px;
-  border: 1px solid #888;
-  width: 400px;
-  border: 1px solid rgb(0, 0, 0);
-  border-radius: 10px;
-  text-align: center;
-}
-
-/* The Close Button */
-.close {
-	color: #000000;
-	float: right;
-	letter-spacing:7px;
-	font-size: 50px;
-}
-
-.close:hover,
-.close:focus {
-  color: rgb(107, 107, 107);
-  text-decoration: none;
-  cursor: pointer;
-}
-
-.modal-submit {
-	background: none;
-	color: inherit;
-	border: none;
-	padding: 0;
-	font: inherit;
-	cursor: pointer;
-	outline: inherit;
-}
-
-/* Login Box */
-.login-box {
-	text-align: center;
-	padding: 20px;
-}
-
-.login-box h2 {
+html {
+	height: 100%;
+  }
+  body {
+	margin:0;
+	padding:0;
+	font-family: sans-serif;
+	background: linear-gradient(#141e30, #243b55);
+  }
+  
+  .login-box {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	width: 400px;
+	padding: 40px;
+	transform: translate(-50%, -50%);
+	background: rgba(0,0,0,.5);
+	box-sizing: border-box;
+	box-shadow: 0 15px 25px rgba(0,0,0,.6);
+	border-radius: 10px;
+  }
+  
+  .login-box h2 {
 	margin: 0 0 30px;
 	padding: 0;
-	color: rgb(0, 0, 0);
+	color: #fff;
 	text-align: center;
   }
   
   .login-box .user-box {
-  position: relative;
+	position: relative;
   }
   
-  /* Line under labels*/
   .login-box .user-box input {
 	width: 100%;
-	padding: 5px 0;
+	padding: 10px 0;
 	font-size: 16px;
-	color: rgb(0, 0, 0);
+	color: #fff;
 	margin-bottom: 30px;
 	border: none;
-	border-bottom: 1px solid #000000;
+	border-bottom: 1px solid #fff;
 	outline: none;
 	background: transparent;
   }
@@ -87,26 +49,24 @@ body {font-family: Arial, Helvetica, sans-serif;}
 	left: 0;
 	padding: 10px 0;
 	font-size: 16px;
-	color: rgb(0, 0, 0);
+	color: #fff;
 	pointer-events: none;
 	transition: .5s;
   }
   
-  /* Cool Button */
   .login-box .user-box input:focus ~ label,
   .login-box .user-box input:valid ~ label {
 	top: -20px;
 	left: 0;
-	color: #777777;
+	color: #03e9f4;
 	font-size: 12px;
   }
-  
   
   .login-box form a {
 	position: relative;
 	display: inline-block;
 	padding: 10px 20px;
-	color: #000000;
+	color: #03e9f4;
 	font-size: 16px;
 	text-decoration: none;
 	text-transform: uppercase;
@@ -117,13 +77,13 @@ body {font-family: Arial, Helvetica, sans-serif;}
   }
   
   .login-box a:hover {
-	background: #c9c9c9;
-	color: rgb(0, 0, 0);
+	background: #03e9f4;
+	color: #fff;
 	border-radius: 5px;
-	box-shadow: 0 0 5px #c9c9c9,
-		0 0 25px #c9c9c9,
-		0 0 50px #c9c9c9,
-		0 0 100px #c9c9c9;
+	box-shadow: 0 0 5px #03e9f4,
+				0 0 25px #03e9f4,
+				0 0 50px #03e9f4,
+				0 0 100px #03e9f4;
   }
   
   .login-box a span {
@@ -136,17 +96,17 @@ body {font-family: Arial, Helvetica, sans-serif;}
 	left: -100%;
 	width: 100%;
 	height: 2px;
-	background: linear-gradient(90deg, transparent, #000000);
+	background: linear-gradient(90deg, transparent, #03e9f4);
 	animation: btn-anim1 1s linear infinite;
   }
   
   @keyframes btn-anim1 {
-  0% {
-	left: -100%;
-  }
-  50%,100% {
-	left: 100%;
-  }
+	0% {
+	  left: -100%;
+	}
+	50%,100% {
+	  left: 100%;
+	}
   }
   
   .login-box a span:nth-child(2) {
@@ -154,18 +114,18 @@ body {font-family: Arial, Helvetica, sans-serif;}
 	right: 0;
 	width: 2px;
 	height: 100%;
-	background: linear-gradient(180deg, transparent, #000000);
+	background: linear-gradient(180deg, transparent, #03e9f4);
 	animation: btn-anim2 1s linear infinite;
 	animation-delay: .25s
   }
   
   @keyframes btn-anim2 {
-  0% {
-	top: -100%;
-  }
-  50%,100% {
-	top: 100%;
-  }
+	0% {
+	  top: -100%;
+	}
+	50%,100% {
+	  top: 100%;
+	}
   }
   
   .login-box a span:nth-child(3) {
@@ -173,18 +133,18 @@ body {font-family: Arial, Helvetica, sans-serif;}
 	right: -100%;
 	width: 100%;
 	height: 2px;
-	background: linear-gradient(270deg, transparent, #000000);
+	background: linear-gradient(270deg, transparent, #03e9f4);
 	animation: btn-anim3 1s linear infinite;
 	animation-delay: .5s
   }
   
   @keyframes btn-anim3 {
-  0% {
-	right: -100%;
-  }
-  50%,100% {
-	right: 100%;
-  }
+	0% {
+	  right: -100%;
+	}
+	50%,100% {
+	  right: 100%;
+	}
   }
   
   .login-box a span:nth-child(4) {
@@ -192,17 +152,17 @@ body {font-family: Arial, Helvetica, sans-serif;}
 	left: 0;
 	width: 2px;
 	height: 100%;
-	background: linear-gradient(360deg, transparent, #000000);
+	background: linear-gradient(360deg, transparent, #03e9f4);
 	animation: btn-anim4 1s linear infinite;
 	animation-delay: .75s
   }
   
   @keyframes btn-anim4 {
-  0% {
-	bottom: -100%;
-  }
-  50%,100% {
-	bottom: 100%;
-  }
+	0% {
+	  bottom: -100%;
+	}
+	50%,100% {
+	  bottom: 100%;
+	}
   }
   
